[package]
name = "games"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.56"
hyper = "0.13.7"
tokio = { version = "0.2.21", features = ["full"]}
mysql = { git = "https://github.com/Somebody62/mysql" }
rand = "0.7.3"
chrono = "0.4.13"
rockrobot = { git = "https://github.com/Somebody62/rockrobot" }
