[package]
name = "games"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
hyper = {version = "0.14.13", features = ["full"]}
tokio = { version = "1.12.0", features = ["full"]}
mysql = { git = "https://github.com/Somebody62/mysql" }
rand = "0.8.4"
chrono = "0.4.19"
