[package]
name = "games"
version = "0.1.0"
authors = ["Justus Croskery <justus@olmmcc.tk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.*"
hyper = {version = "0.*", features = ["full"]}
tokio = { version = "1.*", features = ["full"]}
mysql = { git = "https://github.com/Somebody62/mysql" }
rand = "0.*"
chrono = "0.*"
